# multiplike

./: README.md  pyproject.toml
data/: multiplike_db.db  teste pratico engenheiro de dados - dados_brutos.csv
src/multiplike/: main.py
